--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 BifurcationKit = "0f109fa4-8a5d-4b75-95aa-f515264e7665"
 Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+Compose = "a81c6b42-2e10-5240-aca2-a61377ecd94b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
